manifests/auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-task5-deployment
  labels:
    app: auth-task5-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-task5-app
  template:
    metadata:
      labels:
        app: auth-task5-app
    spec:
      containers:
        - name: auth-task5
          image: developmarat/task5.auth:v3
          ports:
            - name: web
              containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 135
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 30
            periodSeconds: 5
            failureThreshold: 20
