manifests/auth/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: auth-task5-ingress
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - backend:
          serviceName: auth-task5-service
          servicePort: 9000
        path: /login
      - backend:
          serviceName: auth-task5-service
          servicePort: 9000
        path: /signin
      - backend:
          serviceName: auth-task5-service
          servicePort: 9000
        path: /logout
      - backend:
          serviceName: auth-task5-service
          servicePort: 9000
        path: /register
      - backend:
          serviceName: auth-task5-service
          servicePort: 9000
        path: /auth
